Editing headings and options

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="sidebar">
             <div class="card">
-                <h2>👥 1. Add Participants</h2>
+                <h2> 1. Add Participants</h2>
                 <div class="input-group">
                     <input type="text" id="person-name" placeholder="Enter name (e.g., Alice)">
                 </div>
@@ -32,7 +32,7 @@
             </div>
 
             <div class="card">
-                <h2>💸 2. Add Expense</h2>
+                <h2> 2. Add Expense</h2>
                 <div class="input-group">
                     <input type="text" id="exp-desc" placeholder="What was it for? (e.g., Pizza)">
                 </div>
@@ -41,11 +41,11 @@
                 </div>
                 <div class="input-group">
                     <select id="exp-category">
-                        <option value="🛒">🛒 General</option>
-                        <option value="🍔">🍔 Food & Dining</option>
-                        <option value="🚕">🚕 Transport</option>
-                        <option value="🎟️">🎟️ Entertainment</option>
-                        <option value="🏨">🏨 Accommodation</option>
+                        <option value="🛒"> General</option>
+                        <option value="🍔"> Food & Dining</option>
+                        <option value="🚕"> Transport</option>
+                        <option value="🎟️"> Entertainment</option>
+                        <option value="🏨"> Accommodation</option>
                     </select>
                 </div>
                 <div class="input-group">
@@ -56,7 +56,7 @@
                 <button onclick="addExpense()">Split Equally</button>
             </div>
 
-            <button class="danger" onclick="resetApp()">🗑️ Reset Everything</button>
+            <button class="danger" onclick="resetApp()"> Reset Everything</button>
         </div>
 
         <div class="main-content">
@@ -80,7 +80,7 @@
                 <h2>Debt Optimization Engine</h2>
                 <p class="subtitle">Converts complex debt webs into minimum transactions.</p>
 
-                <button class="secondary" onclick="runAlgorithm()" style="margin: 20px 0;">🚀 Run Minimum Cash Flow
+                <button class="secondary" onclick="runAlgorithm()" style="margin: 20px 0;"> Run Minimum Cash Flow
                     Algorithm</button>
 
                 <div id="algorithm-metrics"
